servo/tests/compiletest/plugin/compile-fail/ban-domrefcell.rs
#
!
[
feature
(
plugin
)
]
#
!
[
plugin
(
script_plugins
)
]
extern
crate
script
;
use
script
:
:
test
:
:
DOMRefCell
;
use
script
:
:
test
:
:
JS
;
use
script
:
:
test
:
:
Node
;
struct
Foo
{
bar
:
DOMRefCell
<
JS
<
Node
>
>
}
fn
main
(
)
{
}
